--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,28 +1,27 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149205828,
+	"last_scraped": 1569150933854,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 15,
-	"scrape_ct": 3,
-	"next_scrape": 1569149265828,
+	"updt": 1569150379697,
+	"edit": 17,
+	"next_scrape": 1569195502403,
 	"category": "dice_roller",
-	"last_update": 1569149205828,
+	"last_update": 1569150933854,
 	"output": [
 		{
 			"args": {},
-			"calls": 99901,
+			"calls": 123351,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t. ##",
