--- a/uknown_3msky2.k.json
+++ b/uknown_3msky2.k.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_3msky2.k",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_3msky2.k",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149456940,
+	"last_scraped": 1569150341448,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 14,
-	"scrape_ct": 1,
-	"next_scrape": 1569149516940,
+	"updt": 1569149479483,
+	"edit": 15,
+	"next_scrape": 1569195566047,
 	"category": "coin_flipper",
-	"last_update": 1569149456940,
+	"last_update": 1569150341448,
 	"output": [
 		{
 			"args": {},
-			"calls": 112745,
+			"calls": 122684,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"hrase",
