--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_xcgazw.specs",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_xcgazw.specs",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149277194,
+	"last_scraped": 1569150190770,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1569149337194,
+	"updt": 1569149479483,
+	"edit": 15,
+	"next_scrape": 1569194009572,
 	"category": "plant_sim",
-	"last_update": 1569149277194,
+	"last_update": 1569150190770,
 	"output": [
 		{
 			"args": {},
-			"calls": 12690,
+			"calls": 13290,
 			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"that ",
