--- a/unknown_1773wk.shfflr_key.json
+++ b/unknown_1773wk.shfflr_key.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_1773wk.shfflr_key",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_1773wk.shfflr_key",
 	"sector": "SPC_6164",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149359080,
+	"last_scraped": 1569150262318,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 15,
-	"scrape_ct": 2,
-	"next_scrape": 1569149419080,
+	"updt": 1569149479483,
+	"edit": 16,
+	"next_scrape": 1569195224437,
 	"category": "coin_flipper",
-	"last_update": 1569149359080,
+	"last_update": 1569150262318,
 	"output": [
 		{
 			"args": {},
-			"calls": 116718,
+			"calls": 128566,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"of th",
