--- a/unknown_43cjrs.box.json
+++ b/unknown_43cjrs.box.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_43cjrs.box",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_43cjrs.box",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149517601,
+	"last_scraped": 1569151015394,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 16,
-	"scrape_ct": 1,
-	"next_scrape": 1569149577601,
+	"updt": 1569150379697,
+	"edit": 18,
+	"next_scrape": 1569195136223,
 	"category": "coin_flipper",
-	"last_update": 1569149517601,
+	"last_update": 1569151015394,
 	"output": [
 		{
 			"args": {},
-			"calls": 121545,
+			"calls": 134505,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tructu",
