--- a/unknown_qmw1np.mpet.json
+++ b/unknown_qmw1np.mpet.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_qmw1np.mpet",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_qmw1np.mpet",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149969219,
+	"last_scraped": 1569150843369,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569149253354,
-	"edit": 17,
-	"scrape_ct": 1,
-	"next_scrape": 1569150029219,
+	"updt": 1569150831084,
+	"edit": 19,
+	"next_scrape": 1569192788525,
 	"category": "dice_roller",
-	"last_update": 1569149969219,
+	"last_update": 1569150843369,
 	"output": [
 		{
 			"args": {},
-			"calls": 118639,
+			"calls": 129536,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"wish ",
