--- a/unknown_si4i7s.bot_brain.json
+++ b/unknown_si4i7s.bot_brain.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_si4i7s.bot_brain",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_si4i7s.bot_brain",
 	"sector": "VNP_7267",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149668813,
+	"last_scraped": 1569150542858,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148800938,
-	"edit": 15,
-	"scrape_ct": 0,
-	"next_scrape": 1569149728813,
+	"updt": 1569149703983,
+	"edit": 16,
+	"next_scrape": 1569191271405,
 	"category": "coin_flipper",
-	"last_update": 1569149668813,
+	"last_update": 1569150542858,
 	"output": [
 		{
 			"args": {},
-			"calls": 122709,
+			"calls": 130156,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y've ",
