--- a/uknown_qpa3da.interface.json
+++ b/uknown_qpa3da.interface.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_qpa3da.interface",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_qpa3da.interface",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149759110,
+	"last_scraped": 1569150684368,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569149027633,
-	"edit": 15,
-	"scrape_ct": 1,
-	"next_scrape": 1569149819110,
+	"updt": 1569149928515,
+	"edit": 16,
+	"next_scrape": 1569195252922,
 	"category": "dice_roller",
-	"last_update": 1569149759110,
+	"last_update": 1569150684368,
 	"output": [
 		{
 			"args": {},
-			"calls": 116214,
+			"calls": 127772,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s | B",
