--- a/uknown_el1qyf.access_data.json
+++ b/uknown_el1qyf.access_data.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_el1qyf.access_data",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_el1qyf.access_data",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569150652664,
+	"last_scraped": 1569151316800,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569149928515,
-	"edit": 16,
-	"scrape_ct": 0,
-	"next_scrape": 1569150712664,
+	"updt": 1569150831084,
+	"edit": 17,
+	"next_scrape": 1569193581648,
 	"category": "dice_roller",
-	"last_update": 1569150652664,
+	"last_update": 1569151316800,
 	"output": [
 		{
 			"args": {},
-			"calls": 111937,
+			"calls": 124272,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"21C7 ",
