--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_3ae6km.recruitment",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_3ae6km.recruitment",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569150895240,
+	"last_scraped": 1569151407334,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569150153969,
-	"edit": 16,
-	"scrape_ct": 1,
-	"next_scrape": 1569150955240,
+	"updt": 1569151056382,
+	"edit": 17,
+	"next_scrape": 1569197165840,
 	"category": "plant_sim",
-	"last_update": 1569150895240,
+	"last_update": 1569151407334,
 	"output": [
 		{
 			"args": {},
-			"calls": 12288,
+			"calls": 13462,
 			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				" 'tra",
