--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_v4fsde.t3_clean",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_v4fsde.t3_clean",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569151026154,
+	"last_scraped": 1569151718492,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569150606894,
-	"edit": 17,
-	"scrape_ct": 1,
-	"next_scrape": 1569151086154,
+	"updt": 1569151056382,
+	"edit": 18,
+	"next_scrape": 1569191724240,
 	"category": "plant_sim",
-	"last_update": 1569151026154,
+	"last_update": 1569151718492,
 	"output": [
 		{
 			"args": {},
-			"calls": 12911,
+			"calls": 14358,
 			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"00\\n000",
