--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_yuqh2v.t1_scraper",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_yuqh2v.t1_scraper",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569150853552,
+	"last_scraped": 1569151388664,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569150153969,
-	"edit": 17,
-	"scrape_ct": 0,
-	"next_scrape": 1569150913552,
+	"updt": 1569151056382,
+	"edit": 18,
+	"next_scrape": 1569195263731,
 	"category": "coin_flipper",
-	"last_update": 1569150853552,
+	"last_update": 1569151388664,
 	"output": [
 		{
 			"args": {},
-			"calls": 127209,
+			"calls": 136076,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"patter",
