--- a/unknown_hnd65y.ch.json
+++ b/unknown_hnd65y.ch.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_hnd65y.ch",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_hnd65y.ch",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569151839033,
+	"last_scraped": 1569151990668,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569151732670,
-	"edit": 20,
-	"scrape_ct": 0,
-	"next_scrape": 1569151899033,
+	"updt": 1569151960303,
+	"edit": 21,
+	"next_scrape": 1569195796847,
 	"category": "dice_roller",
-	"last_update": 1569151839033,
+	"last_update": 1569151990668,
 	"output": [
 		{
 			"args": {},
-			"calls": 132001,
+			"calls": 142322,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"heir ",
