--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -1,27 +1,27 @@
 {
 	"_id": "anonymous_gbk0nx.premium_help",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "anonymous_gbk0nx.premium_help",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569122179844,
+	"last_scraped": 1569154362819,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569122190226,
-	"edit": 9,
-	"next_scrape": 1569168751113,
+	"updt": 1569137295885,
+	"edit": 10,
+	"next_scrape": 1569198546481,
 	"category": "clicker",
-	"last_update": 1569122179844,
+	"last_update": 1569154362819,
 	"output": [
 		{
 			"args": {},
-			"calls": 43230,
+			"calls": 53296,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ST0X7",
@@ -71,7 +71,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 41259,
+			"calls": 50191,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ST0X7",
@@ -121,7 +121,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 3500,
+			"calls": 3893,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ST0X7",
