--- a/uknown_1ryirp.stitute.json
+++ b/uknown_1ryirp.stitute.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1ryirp.stitute",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_1ryirp.stitute",
 	"sector": "NGC_1069",
 	"sec_level": 4,
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569085887045,
-	"edit": 1,
+	"updt": 1569091520723,
+	"edit": 2,
 	"scrape_ct": 18,
 	"next_scrape": 1569179651441,
 	"category": "risk_factor",
@@ -50,9 +50,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
