--- a/unknown_yh1nxh.db.json
+++ b/unknown_yh1nxh.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yh1nxh.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yh1nxh.db",
 	"sector": "SPC_0993",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569137685058
+		},
+		{
+			"type": "died",
+			"when": 1569157186293
 		}
 	],
 	"scrape_ct": 10,
@@ -156,8 +160,8 @@
 			]
 		}
 	],
-	"updt": 1569140456663,
-	"edit": 2,
+	"updt": 1569145642692,
+	"edit": 3,
 	"retry_args": [
 		{
 			"click": true
