--- a/unknown_yh1nxh.solve_fawkes.json
+++ b/unknown_yh1nxh.solve_fawkes.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yh1nxh.solve_fawkes",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yh1nxh.solve_fawkes",
 	"sector": "K_0689",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561688446704
+		},
+		{
+			"type": "died",
+			"when": 1569156692686
 		}
 	],
 	"next_scrape": 1568771178673,
@@ -40,14 +44,18 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"s thr",
 						" do t",
 						"terfac",
 						"ispers",
 						"1E27 W",
 						"too\\n1E",
+						"s throu",
+						"e. I do",
+						". I do ",
+						" a\\n1E2",
 						"s\\n1E26 ",
 						"o too\\n1",
+						"hrough a",
 						"E27 Whis"
 					]
 				}
@@ -78,14 +86,18 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"s thr",
 						" do t",
 						"terfac",
 						"ispers",
 						"1E27 W",
 						"too\\n1E",
+						"s throu",
+						"e. I do",
+						". I do ",
+						" a\\n1E2",
 						"s\\n1E26 ",
 						"o too\\n1",
+						"hrough a",
 						"E27 Whis"
 					]
 				}
@@ -116,14 +128,18 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"s thr",
 						" do t",
 						"terfac",
 						"ispers",
 						"1E27 W",
 						"too\\n1E",
+						"s throu",
+						"e. I do",
+						". I do ",
+						" a\\n1E2",
 						"s\\n1E26 ",
 						"o too\\n1",
+						"hrough a",
 						"E27 Whis"
 					]
 				}
@@ -148,6 +164,25 @@
 				"hrough aS",
 				"e. I do S",
 				". I do  S"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"Sugh a",
+						"ugh a S",
+						"SEugh a",
+						"ugh aK S",
+						"s throuS",
+						"e. I doS",
+						"a\\n1E2 S",
+						" a\\n1E2S",
+						"s throu S",
+						"hrough aS",
+						"e. I do S",
+						". I do  S"
+					]
+				}
 			]
 		}
 	],
@@ -155,20 +190,41 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
-				"s thr",
 				" do t",
 				"terfac",
 				"ispers",
 				"1E27 W",
 				"too\\n1E",
+				"s throu",
+				"e. I do",
+				". I do ",
+				" a\\n1E2",
 				"s\\n1E26 ",
 				"o too\\n1",
+				"hrough a",
 				"E27 Whis"
+			]
+		},
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"Sugh a",
+				"ugh a S",
+				"SEugh a",
+				"ugh aK S",
+				"s throuS",
+				"e. I doS",
+				"a\\n1E2 S",
+				" a\\n1E2S",
+				"s throu S",
+				"hrough aS",
+				"e. I do S",
+				". I do  S"
 			]
 		}
 	],
-	"updt": 1568711007582,
-	"edit": 56,
+	"updt": 1569156696988,
+	"edit": 58,
 	"retry_args": [
 		{
 			"CLICK": true
