--- a/uknown_r9elib.id.json
+++ b/uknown_r9elib.id.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_r9elib.id",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_r9elib.id",
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569158502048,
-	"last_scraped": 1569159153180,
+	"last_scraped": 1569159737528,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569158502048
 		}
 	],
-	"scrape_ct": 10,
-	"next_scrape": 1569159213180,
+	"next_scrape": 1569204455224,
 	"category": "dice_roller",
-	"last_update": 1569159153180,
+	"last_update": 1569159737528,
 	"output": [
 		{
 			"args": {},
-			"calls": 71593,
+			"calls": 147349,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ur? Sp",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1569158727898,
-	"edit": 1
+	"updt": 1569159631174,
+	"edit": 3
 }
