--- a/unknown_mwv1a9.paypal.json
+++ b/unknown_mwv1a9.paypal.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_mwv1a9.paypal",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_mwv1a9.paypal",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569166471723,
+	"last_scraped": 1569170090905,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569162791637,
-	"edit": 10,
-	"next_scrape": 1569212770013,
+	"updt": 1569166625689,
+	"edit": 11,
+	"next_scrape": 1569214585179,
 	"category": "clicker",
-	"last_update": 1569166471723,
+	"last_update": 1569170090905,
 	"output": [
 		{
 			"args": {},
-			"calls": 65125,
+			"calls": 80242,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stmas.",
@@ -51,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 98670,
+			"calls": 102347,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stmas.",
@@ -120,6 +120,11 @@
 				"y Chris",
 				"Christm"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
