--- a/uknown_r9elib.id.json
+++ b/uknown_r9elib.id.json
@@ -6,28 +6,41 @@
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569158502048,
-	"last_scraped": 1569171296003,
+	"last_scraped": 1569174829514,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569158502048
 		}
 	],
-	"next_scrape": 1569211591966,
+	"next_scrape": 1569216668924,
 	"category": "dice_roller",
-	"last_update": 1569171296003,
+	"last_update": 1569174829514,
 	"output": [
 		{
 			"args": {},
-			"calls": 179121,
+			"calls": 184146,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"ur? Sp",
-				"1E4C C",
+				" Erin",
+				"oteur?",
+				"omCODE,",
+				"mCODE, ",
+				"iting! ",
 				"Excitin",
+				"1E4C Co",
+				" Sabote",
 				" ComCOD",
+				"user Eri",
 				"ng! Sabo",
+				"eur? Spy",
+				"\\n1E4D E",
+				"E4D Exci",
+				"E4C ComC",
+				"D Exciti",
 				"?\\n1E4D ",
+				" R?\\n1E4",
+				"in R?\\n1E",
 				"Erin R?\\n"
 			],
 			"hits": [
@@ -60,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1569167527954,
-	"edit": 6
+	"updt": 1569171364958,
+	"edit": 7
 }
