--- a/unknown_5umh34.private.json
+++ b/unknown_5umh34.private.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_5umh34.private",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_5umh34.private",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569174386451,
+	"last_scraped": 1569178935181,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569170914347,
-	"edit": 21,
-	"next_scrape": 1569215505244,
+	"updt": 1569174518716,
+	"edit": 22,
+	"next_scrape": 1569224084367,
 	"category": "plant_sim",
-	"last_update": 1569174386451,
+	"last_update": 1569178935181,
 	"output": [
 		{
 			"args": {},
-			"calls": 18986,
+			"calls": 20230,
 			"base": "c:\"gmmxgj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"ot a ",
