--- a/uknown_r9elib.id.json
+++ b/uknown_r9elib.id.json
@@ -6,29 +6,30 @@
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569158502048,
-	"last_scraped": 1569174829514,
+	"last_scraped": 1569179315658,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569158502048
 		}
 	],
-	"next_scrape": 1569216668924,
+	"next_scrape": 1569222175078,
 	"category": "dice_roller",
-	"last_update": 1569174829514,
+	"last_update": 1569179315658,
 	"output": [
 		{
 			"args": {},
-			"calls": 184146,
+			"calls": 191697,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				" Erin",
 				"oteur?",
+				" Erin ",
 				"omCODE,",
 				"mCODE, ",
 				"iting! ",
 				"Excitin",
 				"1E4C Co",
+				"! Sabot",
 				" Sabote",
 				" ComCOD",
 				"user Eri",
@@ -99,6 +100,6 @@
 			]
 		}
 	],
-	"updt": 1569174969439,
-	"edit": 8
+	"updt": 1569175646707,
+	"edit": 9
 }
