--- a/uknown_r9elib.id.json
+++ b/uknown_r9elib.id.json
@@ -6,24 +6,27 @@
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569158502048,
-	"last_scraped": 1569179315658,
+	"last_scraped": 1569182833411,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569158502048
 		}
 	],
-	"next_scrape": 1569222175078,
+	"next_scrape": 1569229294094,
 	"category": "dice_roller",
-	"last_update": 1569179315658,
+	"last_update": 1569182833411,
 	"output": [
 		{
 			"args": {},
-			"calls": 191697,
+			"calls": 198333,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"boteu",
 				"oteur?",
+				", user",
 				" Erin ",
+				"teur? S",
 				"omCODE,",
 				"mCODE, ",
 				"iting! ",
@@ -36,13 +39,16 @@
 				"ng! Sabo",
 				"eur? Spy",
 				"\\n1E4D E",
+				"ODE, use",
 				"E4D Exci",
 				"E4C ComC",
 				"D Exciti",
+				"CODE, us",
 				"?\\n1E4D ",
-				" R?\\n1E4",
+				"rin R?\\n1",
 				"in R?\\n1E",
-				"Erin R?\\n"
+				"Erin R?\\n",
+				" R?\\n1E4D"
 			],
 			"hits": [
 				{
@@ -100,6 +106,6 @@
 			]
 		}
 	],
-	"updt": 1569175646707,
-	"edit": 9
+	"updt": 1569179481679,
+	"edit": 10
 }
