--- a/uknown_r9elib.id.json
+++ b/uknown_r9elib.id.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_r9elib.id",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_r9elib.id",
 	"sector": "SPC_0993",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569158502048
+		},
+		{
+			"type": "died",
+			"when": 1569186444141
 		}
 	],
 	"next_scrape": 1569229294094,
@@ -106,6 +110,6 @@
 			]
 		}
 	],
-	"updt": 1569179481679,
-	"edit": 10
+	"updt": 1569182865721,
+	"edit": 11
 }
