--- a/uknown_r9elib.script.json
+++ b/uknown_r9elib.script.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_r9elib.script",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_r9elib.script",
 	"sector": "K_4792",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561385143168
+		},
+		{
+			"type": "died",
+			"when": 1569186516324
 		}
 	],
 	"next_scrape": 1569073927757,
@@ -76,8 +80,8 @@
 			]
 		}
 	],
-	"updt": 1569025085389,
-	"edit": 480,
+	"updt": 1569029141246,
+	"edit": 481,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
