--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -6,18 +6,18 @@
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569193044923,
+	"last_scraped": 1569196954440,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569190084730,
-	"edit": 29,
-	"next_scrape": 1569234277855,
+	"updt": 1569193240070,
+	"edit": 30,
+	"next_scrape": 1569236702021,
 	"category": "plant_sim",
-	"last_update": 1569193044923,
+	"last_update": 1569196954440,
 	"output": [
 		{
 			"args": {},
@@ -39,6 +39,17 @@
 						"0 0000\\n0"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 781,
+			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"00\\n000",
+				" 0100 0",
+				"0000 000",
+				"0 0000\\n0"
 			]
 		}
 	],
