--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -6,18 +6,18 @@
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569196118020,
+	"last_scraped": 1569199871007,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569192789935,
-	"edit": 28,
-	"next_scrape": 1569241478634,
+	"updt": 1569196175785,
+	"edit": 29,
+	"next_scrape": 1569242486507,
 	"category": "plant_sim",
-	"last_update": 1569196118020,
+	"last_update": 1569199871007,
 	"output": [
 		{
 			"args": {},
@@ -55,6 +55,20 @@
 						"damenta"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 796,
+			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				"scribe",
+				"hing\\\"",
+				" damag",
+				" 'Che'",
+				"nting \\",
+				"l descr",
+				"damenta"
 			]
 		}
 	],
