--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -6,18 +6,18 @@
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569196138893,
+	"last_scraped": 1569199903127,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569192789935,
-	"edit": 28,
-	"next_scrape": 1569240889667,
+	"updt": 1569196175785,
+	"edit": 29,
+	"next_scrape": 1569241750333,
 	"category": "plant_sim",
-	"last_update": 1569196138893,
+	"last_update": 1569199903127,
 	"output": [
 		{
 			"args": {},
@@ -41,6 +41,18 @@
 						"se to be"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1485,
+			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"that ",
+				"made t",
+				" case ",
+				"to be m",
+				"se to be"
 			]
 		}
 	],
