--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -6,18 +6,18 @@
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569196664001,
+	"last_scraped": 1569200354777,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569193015521,
-	"edit": 29,
-	"next_scrape": 1569239887164,
+	"updt": 1569196850858,
+	"edit": 30,
+	"next_scrape": 1569242572193,
 	"category": "plant_sim",
-	"last_update": 1569196664001,
+	"last_update": 1569200354777,
 	"output": [
 		{
 			"args": {},
@@ -47,6 +47,21 @@
 						"etween '"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 544,
+			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				" 'tra",
+				"st the",
+				"al: sh",
+				" betwe",
+				" qualit",
+				"ve disti",
+				"stablish",
+				"etween '"
 			]
 		}
 	],
