--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_3ae6km.recruitment",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_3ae6km.recruitment",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569200354777,
+	"last_scraped": 1569203670030,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569196850858,
-	"edit": 30,
-	"next_scrape": 1569242572193,
+	"updt": 1569200457594,
+	"edit": 31,
+	"next_scrape": 1569246550398,
 	"category": "plant_sim",
-	"last_update": 1569200354777,
+	"last_update": 1569203670030,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 544,
+			"calls": 1965,
 			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				" 'tra",
