--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569204069347,
-	"edit": 33,
+	"updt": 1569207000016,
+	"edit": 34,
 	"next_scrape": 1569248703606,
 	"category": "plant_sim",
 	"last_update": 1569206939656,
@@ -50,6 +50,17 @@
 				" 0100 0",
 				"0000 000",
 				"0 0000\\n0"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"00\\n000",
+						" 0100 0",
+						"0000 000",
+						"0 0000\\n0"
+					]
+				}
 			]
 		}
 	],
