--- a/uknown_71chos.breach.json
+++ b/uknown_71chos.breach.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_71chos.breach",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_71chos.breach",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569214900531,
+	"last_scraped": 1569218180771,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569214886848,
-	"edit": 27,
-	"next_scrape": 1569259450500,
+	"updt": 1569215111988,
+	"edit": 28,
+	"next_scrape": 1569257997331,
 	"category": "fishie_tank",
-	"last_update": 1569214900531,
+	"last_update": 1569218180771,
 	"output": [
 		{
 			"args": {},
-			"calls": 182289,
+			"calls": 193574,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"4B of",
@@ -51,7 +51,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 20528,
+			"calls": 21211,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -86,7 +86,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 206369,
+			"calls": 210239,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"4B of",
