--- a/uknown_ewk6vx.mgb.json
+++ b/uknown_ewk6vx.mgb.json
@@ -1,26 +1,26 @@
 {
 	"_id": "uknown_ewk6vx.mgb",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_ewk6vx.mgb",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569227339442,
-	"last_scraped": 1569227480537,
+	"last_scraped": 1569227794785,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569227339442
 		}
 	],
-	"scrape_ct": 13,
-	"next_scrape": 1569227540537,
+	"scrape_ct": 1,
+	"next_scrape": 1569227854785,
 	"category": "clicker",
-	"last_update": 1569227480537,
+	"last_update": 1569227794785,
 	"output": [
 		{
 			"args": {},
-			"calls": 15793,
+			"calls": 37228,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"\\n1E29",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 12339,
+			"calls": 36179,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"\\n1E29",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 2914,
+			"calls": 6205,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"\\n1E29",
@@ -127,5 +127,7 @@
 				"hate it."
 			]
 		}
-	]
+	],
+	"updt": 1569227743045,
+	"edit": 2
 }
