--- a/uknown_w6wlz1.backend_bsa.json
+++ b/uknown_w6wlz1.backend_bsa.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_w6wlz1.backend_bsa",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_w6wlz1.backend_bsa",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569224335680,
+	"last_scraped": 1569228124871,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569221426535,
-	"edit": 33,
-	"next_scrape": 1569268000804,
+	"updt": 1569224359873,
+	"edit": 34,
+	"next_scrape": 1569273981743,
 	"category": "dice_roller",
-	"last_update": 1569224335680,
+	"last_update": 1569228124871,
 	"output": [
 		{
 			"args": {},
-			"calls": 295360,
+			"calls": 310007,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"# Gos",
