--- a/uknown_qpa3da.interface.json
+++ b/uknown_qpa3da.interface.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_qpa3da.interface",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_qpa3da.interface",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569224666811,
+	"last_scraped": 1569228506202,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569221877910,
-	"edit": 36,
-	"next_scrape": 1569265011449,
+	"updt": 1569224811426,
+	"edit": 37,
+	"next_scrape": 1569274635666,
 	"category": "dice_roller",
-	"last_update": 1569224666811,
+	"last_update": 1569228506202,
 	"output": [
 		{
 			"args": {},
-			"calls": 314387,
+			"calls": 331699,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s | B",
