--- a/uknown_wmfc11.rosebud.json
+++ b/uknown_wmfc11.rosebud.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_wmfc11.rosebud",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_wmfc11.rosebud",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569229742026,
-	"last_scraped": 1569229933039,
+	"last_scraped": 1569230695812,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569229742026
 		}
 	],
-	"scrape_ct": 15,
-	"next_scrape": 1569229993039,
+	"next_scrape": 1569273708369,
 	"category": "coin_flipper",
-	"last_update": 1569229933039,
+	"last_update": 1569230695812,
 	"output": [
 		{
 			"args": {},
-			"calls": 27383,
+			"calls": 106954,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"pleti",
@@ -57,8 +56,8 @@
 			]
 		}
 	],
-	"updt": 1569229770710,
-	"edit": 1,
+	"updt": 1569230672696,
+	"edit": 4,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
