--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_v4fsde.t3_clean",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v4fsde.t3_clean",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569235342061,
+	"last_scraped": 1569238578009,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569232698324,
-	"edit": 42,
-	"next_scrape": 1569280943656,
+	"updt": 1569238557695,
+	"edit": 44,
+	"next_scrape": 1569279187959,
 	"category": "plant_sim",
-	"last_update": 1569235342061,
+	"last_update": 1569238578009,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 10434,
+			"calls": 12704,
 			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"00\\n000",
