--- a/uknown_irvmv4.garden.json
+++ b/uknown_irvmv4.garden.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_irvmv4.garden",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_irvmv4.garden",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569240556554,
-	"last_scraped": 1569241009416,
+	"last_scraped": 1569241380758,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569240556554
 		}
 	],
-	"scrape_ct": 10,
-	"next_scrape": 1569241069416,
+	"next_scrape": 1569281513132,
 	"category": "dice_roller",
-	"last_update": 1569241009416,
+	"last_update": 1569241380758,
 	"output": [
 		{
 			"args": {},
-			"calls": 66486,
+			"calls": 129936,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"1_SEC",
@@ -76,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1569240813217,
-	"edit": 2
+	"updt": 1569241265462,
+	"edit": 4
 }
