--- a/uknown_wmfc11.rosebud.json
+++ b/uknown_wmfc11.rosebud.json
@@ -6,34 +6,47 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569229742026,
-	"last_scraped": 1569243540523,
+	"last_scraped": 1569247109523,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569229742026
 		}
 	],
-	"next_scrape": 1569286637556,
+	"next_scrape": 1569288504104,
 	"category": "coin_flipper",
-	"last_update": 1569243540523,
+	"last_update": 1569247109523,
 	"output": [
 		{
 			"args": {},
-			"calls": 146326,
+			"calls": 154234,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"pleti",
-				"ism f",
+				" she ",
+				"s comp",
 				"r's co",
+				"pletio",
+				"mpleti",
 				"ister'",
+				"is she",
 				"ODY fo",
+				"'s com",
 				" for a",
+				"oment. ",
+				"olliste",
 				"et holl",
 				"ent. is",
-				"ecessar",
+				"Y forge",
 				" necess",
+				" for fo",
+				"tionism ",
+				"t hollis",
 				"she nece",
-				"etionism"
+				"onism fo",
+				"necessar",
+				"for a mo",
+				"etionism",
+				" a momen"
 			],
 			"hits": [
 				{
@@ -56,8 +69,8 @@
 			]
 		}
 	],
-	"updt": 1569240138346,
-	"edit": 8,
+	"updt": 1569243746390,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
