--- a/uknown_wmfc11.rosebud.json
+++ b/uknown_wmfc11.rosebud.json
@@ -6,44 +6,49 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569229742026,
-	"last_scraped": 1569247109523,
+	"last_scraped": 1569250285500,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569229742026
 		}
 	],
-	"next_scrape": 1569288504104,
+	"next_scrape": 1569295023956,
 	"category": "coin_flipper",
-	"last_update": 1569247109523,
+	"last_update": 1569250285500,
 	"output": [
 		{
 			"args": {},
-			"calls": 154234,
+			"calls": 159304,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				" she ",
-				"s comp",
+				"r for",
+				"er's ",
+				"ssary ",
 				"r's co",
 				"pletio",
 				"mpleti",
 				"ister'",
-				"is she",
 				"ODY fo",
 				"'s com",
 				" for a",
+				"s compl",
 				"oment. ",
 				"olliste",
 				"et holl",
 				"ent. is",
+				"complet",
 				"Y forge",
+				" she ne",
 				" necess",
+				" forget",
 				" for fo",
 				"tionism ",
 				"t hollis",
 				"she nece",
 				"onism fo",
 				"necessar",
+				"is she n",
 				"for a mo",
 				"etionism",
 				" a momen"
@@ -69,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1569243746390,
-	"edit": 9,
+	"updt": 1569247130672,
+	"edit": 10,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
