--- a/uknown_irvmv4.garden.json
+++ b/uknown_irvmv4.garden.json
@@ -6,22 +6,23 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569240556554,
-	"last_scraped": 1569248194046,
+	"last_scraped": 1569251198482,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569240556554
 		}
 	],
-	"next_scrape": 1569288632591,
+	"next_scrape": 1569297415774,
 	"category": "dice_roller",
-	"last_update": 1569248194046,
+	"last_update": 1569251198482,
 	"output": [
 		{
 			"args": {},
-			"calls": 144225,
+			"calls": 158773,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"| USE",
 				"1_SEC",
 				"T0X61_",
 				"_SECT0X",
@@ -29,11 +30,17 @@
 				"T ERROR",
 				"R | TIM",
 				"ERROR |",
-				"593\\nSY",
 				" PROG E",
+				"ter comc",
 				"holliste",
+				"TW ERROR",
+				"TIME ERR",
+				"SECT0X66",
+				"ROR | TI",
 				"R | PROG",
-				" NETW ER"
+				"96F593\\n",
+				" NETW ER",
+				"6F593\\nSY"
 			],
 			"hits": [
 				{
@@ -75,6 +82,6 @@
 			]
 		}
 	],
-	"updt": 1569244874247,
-	"edit": 6
+	"updt": 1569248257089,
+	"edit": 7
 }
